kubernetes/apps/network/envoy-gateway/config/backendtrafficpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.tholinka.dev/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: backend
spec:
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
  retry:
    numRetries: 2
    retryOn:
      triggers:
        # reset can have idempotent issues on e.g. POST calls,
        # reset-before-request only retries if no response has been written at all
        # so it still protects against e.g. connection failures
        - reset-before-request
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive:
    idleTime: 60s
    interval: 10s
    probes: 3
  timeout:
    http:
      connectionIdleTimeout: 4s
      requestTimeout: 0s
      streamIdleTimeout: 1h
